name:                http-haskell
version:             0.1.0.0
synopsis:            Hyper text that isn't delivered until you order it.
description:         A computer owner is incredibly logged on.
homepage:            https://github.com/evturn/http-haskell
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           Copyright: (c) 2018 Evan Turner
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , firefly
                     , text
